Standard : Minor issue on datatables footer vertical alignment
Standard : Clearing the datatable’s data should also clear the Footer values. When clearing the datatable there’s an underline drawn on the image column

--- a/src/main/resources/gwt/material/design/client/resources/css/style.css
+++ b/src/main/resources/gwt/material/design/client/resources/css/style.css
@@ -129,6 +129,7 @@ table.striped > tbody > tr:nth-child(odd) td.frozen-col {
     height: 15px;
     width: 100%;
     overflow-y: hidden;
+    background: #f9f9f9;
 }
 
 .table-container {
